src/objects/OrgChartPlus__SM_Intimacy__c.object
<CustomObject>
    <description>A measure of intimacy between a customer contact and a sales team member</description>
    <fields>
        <fullName>OrgChartPlus__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Relationship_Intimacies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Intimacy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Intimacy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__TeamMember_Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember_Competitor</label>
        <referenceTo>OrgChartPlus__SM_Competitor__c</referenceTo>
        <relationshipLabel>Contact Intimacies</relationshipLabel>
        <relationshipName>Contact_Intimacies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__TeamMember_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember_Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Relationship_IntimaciesTM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__TeamMember_NonSFDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember_NonSFDC</label>
        <referenceTo>OrgChartPlus__SM_NonSFUser__c</referenceTo>
        <relationshipName>Relationship_Intimacies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__TeamMember_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TeamMember_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationship_Intimacies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Intimacy</label>
    <nameField>
        <displayFormat>OCI-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Intimacies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>